[project]
name = "synthesis_lido_mcpserver"
version = "0.1.0"
description = "An agent-friendly MCP server for staking, wrapping, rewards, governance, and dry-run verbs with explicit policy envelopes and audit logs."
readme = "README.md"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
